eks/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mundilfari-deploy
  labels:
    app: mundilfari-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mundilfari-api
  template:
    metadata:
      labels:
        app: mundilfari-api
    spec:
      containers:
        - name: mundilfari-api
          image: 633338312642.dkr.ecr.us-east-1.amazonaws.com/mundilfari:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
