eks/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mundilfari-api-svc
  labels:
    app: mundilfari
spec:
  selector:
    app: mundilfari-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
