eks/ingress.yaml
# Deploy ingress-nginx controller
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.7.0/deploy/static/provider/aws/deploy.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mundilfari-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: mundilfari.shenle.lu
      http:
        paths:
          - backend:
              service:
                name: mundilfari-api-svc
                port:
                  number: 80
            pathType: Prefix
            path: /
  tls:
    - hosts:
        - mundilfari.shenle.lu
      secretName: mundilfari-api-cert
